adding app_api endpoints
