# go/model_app_role.go
@@ -1,0 +1,19 @@
+/*
+ * OpenLattice API
+ *
+ * OpenLattice API
+ *
+ * API version: 0.0.1
+ * Contact: support@openlattice.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openlattice
+// AppRole struct for AppRole
+type AppRole struct {
+	Id string `json:"id,omitempty"`
+	Name string `json:"name,omitempty"`
+	Title string `json:"title,omitempty"`
+	Description string `json:"description,omitempty"`
+	Permissions AppRolePermissions `json:"permissions,omitempty"`
+}
